Add puzzle admin page with enable/disable function

--- a/openday_scavenger/puzzles/demo/static/index.html
+++ b/openday_scavenger/puzzles/demo/static/index.html
@@ -2,6 +2,7 @@
     <head>
         <script src="/static/js/htmx.min.js"></script>
         <script src="/static/js/json-enc.js"></script>
+        <script src="/static/css/tailwind.css"></script>
     </head>
     <body>
         <h1>Demo Puzzle</h1>
@@ -11,7 +12,7 @@
         <form id='form' hx-encoding='multipart/form-data' hx-post='/game/submission' hx-ext='json-enc'>
             <input hidden type="text" id="id" name="id" value="{{ puzzle_id }}">
             <label for="energy">Energy:</label><br>
-            <input type="text" id="answer" name="answer">
+            <input class="border-2" type="text" id="answer" name="answer">
             <button>
                 Submit your answer
             </button>
