--- a/openday_scavenger/puzzles/demo/static/index.html
+++ b/openday_scavenger/puzzles/demo/static/index.html
@@ -12,7 +12,7 @@
         <form id='form' hx-encoding='multipart/form-data' hx-post='/game/submission' hx-ext='json-enc'>
             <input hidden type="text" id="id" name="id" value="{{ puzzle_id }}">
             <label for="energy">Energy:</label><br>
-            <input class="border-2" type="text" id="answer" name="answer">
+            <input type="text" id="answer" name="answer">
             <button>
                 Submit your answer
             </button>
