--- a/openday_scavenger/static/html/layout.html
+++ b/openday_scavenger/static/html/layout.html
@@ -9,7 +9,7 @@
     </head>
     
     <body>
-        <h1>Admin</h1>
+        <h1 class="mx-auto" style="width:90%;">Welcome to the Open Day Scavenger Hunt</h1>
         {% block content %}{% endblock %}
     </body>
 </html>
