Fix hx-post path for submission.

--- a/openday_scavenger/puzzles/demo/static/index.html
+++ b/openday_scavenger/puzzles/demo/static/index.html
@@ -8,7 +8,7 @@
         
         What energy in GeV does the accelerator of the Australian Synchrotron run at?
         
-        <form id='form' hx-encoding='multipart/form-data' hx-post='/game/submission' hx-ext='json-enc'>
+        <form id='form' hx-encoding='multipart/form-data' hx-post='/submission' hx-ext='json-enc'>
             <input hidden type="text" id="name" name="name" value="{{ puzzle_id }}">
             <label for="energy">Energy:</label><br>
             <input type="text" id="answer" name="answer">
