--- a/openday_scavenger/puzzles/demo/static/index.html
+++ b/openday_scavenger/puzzles/demo/static/index.html
@@ -2,6 +2,8 @@
     <head>
         <script src="/static/js/htmx.min.js"></script>
         <script src="/static/js/json-enc.js"></script>
+
+        <link id="favicon" rel="icon" type="image/x-icon" href="/static/favicon.ico">
     </head>
     <body>
         <h1>Demo Puzzle</h1>
