--- a/openday_scavenger/static/html/layout.html
+++ b/openday_scavenger/static/html/layout.html
@@ -8,6 +8,8 @@
         <link href="/static/css/fontawesome.min.css" rel="stylesheet"/>
         <link href="/static/css/solid.min.css" rel="stylesheet"/>
         <link href="/static/css/openday.css" rel="stylesheet"/>
+
+        <link id="favicon" rel="icon" type="image/x-icon" href="/static/favicon.ico">
     </head>
     
     <body>
