--- a/openday_scavenger/puzzles/demo/static/index.html
+++ b/openday_scavenger/puzzles/demo/static/index.html
@@ -12,7 +12,7 @@
         
         <form id='form' hx-encoding='multipart/form-data' hx-post='/submission' hx-ext='json-enc'>
             <input hidden type="text" id="name" name="name" value="{{ puzzle_id }}">
-            <input hidden type="text" id="visitor_uid" name="visitor_uid" value="{{ visitor_uid }}">
+            <input hidden type="text" id="visitor" name="visitor" value="{{ visitor }}">
             <label for="energy">Energy:</label><br>
             <input type="text" id="answer" name="answer">
             <button>
