--- a/openday_scavenger/puzzles/demo/static/index.html
+++ b/openday_scavenger/puzzles/demo/static/index.html
@@ -10,7 +10,7 @@
         
         What energy in GeV does the accelerator of the Australian Synchrotron run at?
         
-        <form id='form' hx-encoding='multipart/form-data' hx-post='/submission' hx-ext='json-enc'>
+        <form id='form' hx-encoding='multipart/form-data' hx-post='/submission'>
             <input hidden type="text" id="name" name="name" value="{{ puzzle_id }}">
             <input hidden type="text" id="visitor" name="visitor" value="{{ visitor }}">
             <label for="energy">Energy:</label><br>
