Add example how puzzles can serve local static files

--- a/openday_scavenger/puzzles/demo/static/index.html
+++ b/openday_scavenger/puzzles/demo/static/index.html
@@ -2,7 +2,8 @@
     <head>
         <script src="/static/js/htmx.min.js"></script>
         <script src="/static/js/json-enc.js"></script>
-
+        
+        <link href="static/demo.css" rel="stylesheet">
         <link id="favicon" rel="icon" type="image/x-icon" href="/static/favicon.ico">
     </head>
     <body>
