Add correct, incorrect and completed pages

--- a/openday_scavenger/puzzles/demo/static/index.html
+++ b/openday_scavenger/puzzles/demo/static/index.html
@@ -11,7 +11,7 @@
         
         What energy in GeV does the accelerator of the Australian Synchrotron run at?
         
-        <form id='form' hx-encoding='multipart/form-data' hx-post='/submission'>
+        <form id='form' method='POST' action='/submission'>
             <input hidden type="text" id="name" name="name" value="{{ puzzle }}">
             <input hidden type="text" id="visitor" name="visitor" value="{{ visitor }}">
             <label for="energy">Energy:</label><br>
