--- a/openday_scavenger/puzzles/ads_question_answer_matchup/static/index.html
+++ b/openday_scavenger/puzzles/ads_question_answer_matchup/static/index.html
@@ -13,11 +13,12 @@
 
         <form id='form' method='POST' action='/submission'>
             <input hidden type="text" id="name" name="name" value="{{ puzzle }}">
+            <input hidden type="text" id="answer" name="answer">
             <div class="container">
-                <div id="sorting-disabled" class="row">
-                    <h4 class="col-12">Disabling Sorting</h4>
+                <p>Rearrange the answers on the right so that they match with the questions on the left.</p>
+                <div class="row">
                     <div id="example4Left" class="list-group col">
-                        <div class="list-group-item">What's the heaviest sample that the ADS-1 table will support? (in kilograms) </div>
+                        <div class="h-100 list-group-item">What's the heaviest sample that the ADS-1 table will support? (in kilograms) </div>
                         <div class="list-group-item">How thick is the block of tungsten in the ADS-1 shutter? (in centimetres)</div>
                         <div class="list-group-item">What is the shortest X-ray wavelength that ADS-1 can select? (in nanometres) </div>
                         <div class="list-group-item">What is the highest beam energy that ADS-1 can operate at? (in keV)</div>
@@ -30,8 +31,8 @@
                         <div class="list-group-item tinted" id="data1">300</div>
                     </div>
                     <div style="padding: 0" class="col-12">
-                    </div>
-            <input hidden type="text" id="answer" name="answer">
+            </div>
+            <br>
             <button>
                 Submit your answer
             </button>
