chore(ads matchup puzzle): use bootstrap from the project level static

--- a/openday_scavenger/puzzles/ads_question_answer_matchup/static/index.html
+++ b/openday_scavenger/puzzles/ads_question_answer_matchup/static/index.html
@@ -1,13 +1,19 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="static/css/bootstrap.min.css">
-    <script src="static/js/bootstrap.min.js"></script>
+    <link id="favicon" rel="icon" type="image/x-icon" href="/static/favicon.ico">
+
+    <!-- js venders -->
     <script src="/static/js/htmx.min.js"></script>
     <script src="/static/js/json-enc.js"></script>
+    <script src="/static/js/bootstrap.bundle.min.js"></script>
     <script src="static/js/sortable.min.js"></script>
+
+    <!-- css venders -->
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet" />
+
+    <!-- custom styles -->
     <link href="static/ads_question_answer_matchup.css" rel="stylesheet">
-    <link id="favicon" rel="icon" type="image/x-icon" href="/static/favicon.ico">
 </head>
 
 <body>
