--- a/openday_scavenger/puzzles/xray_filters/static/index.html
+++ b/openday_scavenger/puzzles/xray_filters/static/index.html
@@ -1,4 +1,5 @@
 <html>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <head>
         <script src="/static/js/htmx.min.js"></script>
         <script src="/static/js/json-enc.js"></script>
@@ -7,31 +8,76 @@
         <link id="favicon" rel="icon" type="image/x-icon" href="/static/favicon.ico">
 
         <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const checkboxFilterPairs = [
+                { checkboxId: 'filter1-checkbox', filterClass: '.filter1', beamClass: '.beam1' },
+                { checkboxId: 'filter2-checkbox', filterClass: '.filter2', beamClass: '.beam2' },
+                { checkboxId: 'filter3-checkbox', filterClass: '.filter3', beamClass: '.beam3' },
+                { checkboxId: 'filter4-checkbox', filterClass: '.filter4', beamClass: '.beam4' }
+            ];
+
+            function updateBeamsAndFilters() {
+                const activeBeams = [];
+
+                // Loop through each checkbox and update visibility/dimming
+                checkboxFilterPairs.forEach(pair => {
+                    const checkbox = document.getElementById(pair.checkboxId);
+                    const filter = document.querySelector(pair.filterClass);
+                    const beam = document.querySelector(pair.beamClass);
+
+                    if (checkbox.checked) {
+                        // Filter down
+                        filter.classList.add(pair.filterClass.replace('.', '') + '-down');
+                        beam.style.visibility = 'visible';
+                        beam.style.opacity = '1';
+                        activeBeams.push(beam); // Collect visible beams
+                    } else {
+                        // Filter up
+                        filter.classList.remove(pair.filterClass.replace('.', '') + '-down');
+                        beam.style.visibility = 'hidden';
+                        beam.style.opacity = '0';
+                    }
+                });
+
+                // Apply progressive dimming in **reverse order**
+                activeBeams.reverse().forEach((beam, index) => {
+                    // Clear previous dimming classes
+                    beam.classList.remove('dim-1', 'dim-2', 'dim-3', 'dim-4');
+
+                    // Apply appropriate dimming class (reverse order)
+                    beam.classList.add(`dim-${index + 1}`);
+                });
+            }
+
+            // Loop through each pair and add event listeners to toggle 'down' class and update beams
+            checkboxFilterPairs.forEach(pair => {
+                const checkbox = document.getElementById(pair.checkboxId);
+                checkbox.addEventListener('change', updateBeamsAndFilters);
+            });
+
+            // Handle attenuation calculations for all checkboxes
             function handleCheckboxClick() {
                 let target_attenuation = 1;
-
-                // Get all checkboxes by their class
                 const checkboxes = document.querySelectorAll('.checkbox');
 
-                // Loop through each checkbox and add to target_attenuation if checked
+                // Calculate attenuation based on checked filters
                 checkboxes.forEach(checkbox => {
                     if (checkbox.checked) {
                         target_attenuation *= parseFloat(checkbox.value);
                     }
                 });
 
-                // Display the target_attenuation
+                // Display the target attenuation
                 document.getElementById('output').innerText = 'Target attenuation: ' + Math.round((1-target_attenuation)*100*10)/10 + '%';
-                document.getElementById('answer').value = Math.round((1-target_attenuation)*100*10)/10
+                document.getElementById('answer').value = Math.round((1-target_attenuation)*100*10)/10;
             }
 
-            // Add event listeners to all checkboxes
-            document.addEventListener('DOMContentLoaded', () => {
-                const checkboxes = document.querySelectorAll('.checkbox');
-                checkboxes.forEach(checkbox => {
-                    checkbox.addEventListener('click', handleCheckboxClick);
-                });
+            // Add event listeners to all checkboxes for attenuation
+            const checkboxes = document.querySelectorAll('.checkbox');
+            checkboxes.forEach(checkbox => {
+                checkbox.addEventListener('click', handleCheckboxClick);
             });
+        });
         </script>
     </head>
     <body>
@@ -45,6 +91,19 @@
             and of difference thicknesses.  If no filters are down, we have 0% attenuation.  If all 5 filters are down, we have 94.9% attenuation.
             Play around to get to the a target attenuation of <b>92%</b>, then hit submit.</p>
 
+        <div class="image-container">
+            <img src="static/table_and_beam.svg" alt="Table and beam" class="table-and-beam">
+            <img src="static/filters/mo_filter_04mm.svg" alt="Filter4" class="filter-image filter4">
+            <img src="static/beam_post_filter.svg" alt="Beam4 post filter" class="beam4">
+            <img src="static/filters/w_filter_01mm.svg" alt="Filter3" class="filter-image filter3">
+            <img src="static/beam_post_filter.svg" alt="Beam3 post filter" class="beam3">
+            <img src="static/filters/w_filter_005mm.svg" alt="Filter2" class="filter-image filter2">
+            <img src="static/beam_post_filter.svg" alt="Beam2 post filter" class="beam2">
+            <img src="static/filters/ni_filter_02mm.svg" alt="Filter1" class="filter-image filter1">
+            <img src="static/beam_post_filter.svg" alt="Beam1 post filter" class="beam1">
+
+
+        </div>
 
     <h3 id="output">Target attenuation: 0%</h3>
 
@@ -54,32 +113,26 @@
             <input hidden type="text" id="answer" name="answer">
             <p>
                 <label>
-                    <input type="checkbox" class="checkbox" value="0.8858244085674697">
+                    <input type="checkbox" id="filter1-checkbox" class="checkbox" value="0.8858244085674697">
                     Nickel 0.2 mm
                 </label>
             </p>
             <p>
                 <label>
-                    <input type="checkbox" class="checkbox" value="0.5410750890125073">
+                    <input type="checkbox" id="filter2-checkbox" class="checkbox" value="0.5410750890125073">
                     Tungsten 0.05 mm
                 </label>
             </p>
             <p>
                 <label>
-                    <input type="checkbox" class="checkbox" value="0.2927622519498927">
+                    <input type="checkbox" id="filter3-checkbox" class="checkbox" value="0.2927622519498927">
                     Tungsten 0.1 mm
                 </label>
             </p>
             <p>
                 <label>
-                    <input type="checkbox" class="checkbox" value="0.5077974066101049">
+                    <input type="checkbox" id="filter4-checkbox" class="checkbox" value="0.5077974066101049">
                     Molybdenum 0.4 mm
-                </label>
-            </p>
-            <p>
-                <label>
-                    <input type="checkbox" class="checkbox" value="0.7125990503853515">
-                    Molybdenum 0.2 mm
                 </label>
             </p>
 
