--- a/openday_scavenger/static/html/403_disabled_puzzle.html
+++ b/openday_scavenger/static/html/403_disabled_puzzle.html
@@ -1,10 +1,14 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="d-flex justify-content-center align-items-center">
-    <div class="col-md-12 text-center">
-        <h1>403</h1>
-        <h2>Disabled Puzzle</h2>
-        <p>Random Text</p>
-    </div>
+<div class="container my-4 text-center">
+    <h1 class="type-h1 mb-3">⚠️ Oh no! ⚠️</h1>
+    <p>
+        👾 <b>You've found a 403 disabled puzzle error</b>! 👾<br />
+        Sorry, the puzzle you're trying to access has been disabled.
+    </p>
+    <p>Look around to find another puzzle!</p>
+    <p class="text-secondary mt-5">
+        <a href="/">Click here to go back to the main page!</a>
+    </p>
 </div>
 {% endblock %}
