--- a/openday_scavenger/static/html/404_unknown_puzzle.html
+++ b/openday_scavenger/static/html/404_unknown_puzzle.html
@@ -1,10 +1,13 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="d-flex justify-content-center align-items-center">
-    <div class="col-md-12 text-center">
-        <h1>404</h1>
-        <h2>Unknown Puzzle</h2>
-        <p>Random Text</p>
-    </div>
+<div class="container my-4 text-center">
+    <h1 class="type-h1 mb-3">⚠️ Oh no! ⚠️</h1>
+    <p>
+        👾 <b>You've found a 404 unknown puzzle error</b>! 👾<br />
+        There's no page or puzzle here.<br />
+    </p>
+    <p class="text-secondary mt-5">
+        <a href="/">Click here to go back to the main page!</a>
+    </p>
 </div>
 {% endblock %}
