--- a/openday_scavenger/static/html/410_completed_puzzle.html
+++ b/openday_scavenger/static/html/410_completed_puzzle.html
@@ -1,10 +1,14 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="d-flex justify-content-center align-items-center">
-    <div class="col-md-12 text-center">
-        <h1>410</h1>
-        <h2>Puzzle already correctly answered!!</h2>
-        <p>You rock!</p>
-    </div>
+<div class="container my-4 text-center">
+    <h1 class="type-h1 mb-3">💮 Hello again! 💮</h1>
+    <p>
+        💯 <b>You've already correctly answered this puzzle</b>! 💯<br />
+        You rock!
+    </p>
+    <p>Look around to find another puzzle!</p>
+    <p class="text-secondary mt-5">
+        <a href="/">Click here to go back to the main page!</a>
+    </p>
 </div>
 {% endblock %}
