--- a/openday_scavenger/static/html/layout.html
+++ b/openday_scavenger/static/html/layout.html
@@ -1,18 +1,20 @@
 <html>
-    <head>
-        <script src="/static/js/htmx.min.js"></script>
-        <script src="/static/js/json-enc.js"></script>
-        <script src="/static/js/bootstrap.bundle.min.js"></script>
-        
-        <link href="/static/css/bootstrap.min.css" rel="stylesheet"/>
-        <link href="/static/css/fontawesome.min.css" rel="stylesheet"/>
-        <link href="/static/css/solid.min.css" rel="stylesheet"/>
-        <link href="/static/css/openday.css" rel="stylesheet"/>
 
-        <link id="favicon" rel="icon" type="image/x-icon" href="/static/favicon.ico">
-    </head>
-    
-    <body>
-        {% block content %}{% endblock %}
-    </body>
+<head>
+    <script src="/static/js/htmx.min.js"></script>
+    <script src="/static/js/json-enc.js"></script>
+    <script src="/static/js/bootstrap.bundle.min.js"></script>
+
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="/static/css/fontawesome.min.css" rel="stylesheet" />
+    <link href="/static/css/solid.min.css" rel="stylesheet" />
+    <link href="/static/css/openday.css" rel="stylesheet" />
+
+    <link id="favicon" rel="icon" type="image/x-icon" href="/static/favicon.ico">
+</head>
+
+<body class="game-body">
+    {% block content %}{% endblock %}
+</body>
+
 </html>
