Tweaking the copy

--- a/openday_scavenger/puzzles/map/static/index.html
+++ b/openday_scavenger/puzzles/map/static/index.html
@@ -14,16 +14,16 @@
 </head>
 
 <body>
-    <h1 class="title">👾 Scientific Computing 👾<br />📍 Scavenger Hunt Map 🗺</h1>
+    <h1 class="title">📍 Scavenger Hunt Map 🗺</h1>
 
     <div class="container instructions">
-        <p>You can finish at any time! ⏰
-            <br />(Even if you haven't found all the QR codes!)
-            <br />Look at this map for hints if you're having trouble finding them!
+        <p>
+            You can finish at any time! ⏰
+            <br />(Even if you haven't finished all the puzzles!)
         </p>
-        <p class="notice">⚠️ Remember to come back to the Scientific Computing booth to check your final score and
-            collect your prize
-            ⚠️</p>
+        <p>
+            Look at this map for hints if you're having trouble finding QR codes.
+        </p>
     </div>
 
     <div class="container map-wrapper">
@@ -34,6 +34,10 @@
             <img src="/static/images/map/as_layout.svg" class="map-svg" />
         </div>
     </div>
+
+    <p class="return">
+        <a href="/" class="link">Click here to go back to the main page!</a>
+    </p>
 </body>
 
 </html>
