Tweaks to make it match the main static pages more

--- a/openday_scavenger/puzzles/map/static/index.html
+++ b/openday_scavenger/puzzles/map/static/index.html
@@ -36,7 +36,8 @@
     </div>
 
     <p class="return">
-        <a href="/" class="link">Click here to go back to the main page!</a>
+        <a href="/" class="link">
+            &lt; Click here to go back to the main page</a>
     </p>
 </body>
 
