--- a/openday_scavenger/puzzles/demo/static/index.html
+++ b/openday_scavenger/puzzles/demo/static/index.html
@@ -7,7 +7,7 @@
         <link id="favicon" rel="icon" type="image/x-icon" href="/static/favicon.ico">
     </head>
     <body>
-        <h1>Demo Puzzle</h1>
+        <h1>Demo Puzzle - testing build</h1>
         
         What energy in GeV does the accelerator of the Australian Synchrotron run at?
         
