Add styles for small screens

--- a/openday_scavenger/puzzles/xray_filters/static/index.html
+++ b/openday_scavenger/puzzles/xray_filters/static/index.html
@@ -1,6 +1,7 @@
 <html>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <head>
+        <meta content="width=device-width, initial-scale=1" name="viewport" />
         <script src="/static/js/htmx.min.js"></script>
         <script src="/static/js/json-enc.js"></script>
 
