convert images to png

--- a/openday_scavenger/puzzles/xray_filters/static/index.html
+++ b/openday_scavenger/puzzles/xray_filters/static/index.html
@@ -95,16 +95,16 @@
                 Play around to get to a target attenuation of <b>92%</b>, then hit submit.</p>
 
             <div class="image-container">
-                <img src="static/table_and_beam.svg" alt="Table and beam" class="table-and-beam">
-                <img src="static/xray-arrow.svg" alt="X-ray arrow" class="arrow-left">
-                <img src="static/filters/mo_filter_04mm.svg" alt="Filter4" class="filter-image filter4">
-                <img src="static/beam_post_filter.svg" alt="Beam4 post filter" class="beam4">
-                <img src="static/filters/w_filter_01mm.svg" alt="Filter3" class="filter-image filter3">
-                <img src="static/beam_post_filter.svg" alt="Beam3 post filter" class="beam3">
-                <img src="static/filters/w_filter_005mm.svg" alt="Filter2" class="filter-image filter2">
-                <img src="static/beam_post_filter.svg" alt="Beam2 post filter" class="beam2">
-                <img src="static/filters/ni_filter_02mm.svg" alt="Filter1" class="filter-image filter1">
-                <img src="static/beam_post_filter.svg" alt="Beam1 post filter" class="beam1">
+                <img src="static/table_and_beam.png" alt="Table and beam" class="table-and-beam">
+                <img src="static/xray-arrow.png" alt="X-ray arrow" class="arrow-left">
+                <img src="static/filters/mo_filter_04mm.png" alt="Filter4" class="filter-image filter4">
+                <img src="static/beam_post_filter.png" alt="Beam4 post filter" class="beam4">
+                <img src="static/filters/w_filter_01mm.png" alt="Filter3" class="filter-image filter3">
+                <img src="static/beam_post_filter.png" alt="Beam3 post filter" class="beam3">
+                <img src="static/filters/w_filter_005mm.png" alt="Filter2" class="filter-image filter2">
+                <img src="static/beam_post_filter.png" alt="Beam2 post filter" class="beam2">
+                <img src="static/filters/ni_filter_02mm.png" alt="Filter1" class="filter-image filter1">
+                <img src="static/beam_post_filter.png" alt="Beam1 post filter" class="beam1">
 
 
             </div>
