--- a/openday_scavenger/puzzles/map/static/index.html
+++ b/openday_scavenger/puzzles/map/static/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Scientific Computing Scavenger Hunt Map</title>
+    <title>Scientific Computing Scavenger Hunt Map - Unlock the Secrets of the Synchrotron</title>
     <link id="favicon" rel="icon" type="image/x-icon" href="/static/favicon.ico">
 
     <!-- JS -->
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <h1 class="title">📍 Scavenger Hunt Map 🗺</h1>
+    <h1 class="title">📍 Puzzle Locks Map 🗺</h1>
 
     <div class="container instructions">
         <p>
@@ -22,14 +22,15 @@
             <br />(Even if you haven't finished all the puzzles!)
         </p>
         <p>
-            Look at this map for hints if you're having trouble finding QR codes.
+            Look at this map for hints if you're having trouble finding puzzle locks. 📍
         </p>
     </div>
 
     <div class="container map-wrapper">
-        <div id="map-public" class="map-container">
+        <div id="map-public" class="map-public">
             {% for marker in locations %}
-            <img style="{{ marker }}" class="map-marker" src="/static/images/map/map_marker.svg"></i>
+            <img class="map-marker" src="/static/images/map/map_marker.svg" data-marker data-top="{{marker.top}}"
+                data-left="{{marker.left}}"></i>
             {% endfor %}
             <img src="/static/images/map/as_layout.svg" class="map-svg" />
         </div>
@@ -39,6 +40,46 @@
         <a href="/" class="link">
             &lt; Click here to go back to the main page</a>
     </p>
+
+    <script type="text/javascript">
+        var map = document.getElementById("map-public");
+        var markers = document.querySelectorAll('[data-marker]');
+
+        // Adjust marker positions according to div size
+        let positionMarkers = () => {
+            markers.forEach(function (m) {
+                if (map.getBoundingClientRect().width > 799) {
+                    m.style.top = m.dataset.top;
+                    m.style.left = m.dataset.left;
+                } else {
+                    var height_ratio = m.dataset.top / 642.86 * map.getBoundingClientRect().height;
+                    var width_ratio = m.dataset.left / 800 * map.getBoundingClientRect().width;
+
+                    m.style.top = height_ratio;
+                    m.style.left = width_ratio;
+                }
+            });
+        }
+
+        // Debounce browser resize listener
+        let debounce = (callback, delay) => {
+            let myTimeout;
+            return () => {
+                clearTimeout(myTimeout);
+                myTimeout = setTimeout(() => {
+                    callback()
+                }, delay);
+            };
+        };
+
+        let doDebounce = debounce(() => positionMarkers(), 50)
+        window.addEventListener('resize', () => doDebounce());
+
+        // Check if markers after initial page load
+        document.addEventListener('DOMContentLoaded', function () {
+            positionMarkers();
+        }, false);
+    </script>
 </body>
 
 </html>
