--- a/openday_scavenger/puzzles/imagereveal/static/index.html
+++ b/openday_scavenger/puzzles/imagereveal/static/index.html
@@ -10,22 +10,32 @@
         <h1>X-ray Fluorescence Microscopy (XFM) Images Puzzle</h1>
         
         What animal was scanned at the XFM beamline to produce this map of atomic elements?
-        
-        <form id='form' method='POST' action='/submission'>
+
+        {% if state['complete'] == false %}
+        <form id='form' method='POST' action='/puzzles/imagereveal/partsubmission'>
             <input hidden type="text" id="name" name="name" value="{{ puzzle }}">
             <input hidden type="text" id="visitor" name="visitor" value="{{ visitor }}">
-            <label for="animal1">Animal 1:</label><br>
-            <img src="static/105366-Ants-ZnCaK.jpg" alt="Animal1" width="500" height="500"><br>
+            <label for="animal1">Animal {{ state["animal_id"] }}:</label><br>
+            <img src="static/im{{ state['animal_id'] }}_{{ state['fraction'] }}.jpg" alt="Animal {{ state['animal_id'] }}" width="500" height="500"><br>
             <!-- <input type="text" id="answer" name="answer"> -->
-            <select id="insect-id" name="insectCode" hx-get="change.html" hx-trigger="change" hx-target='#rental-id' hx-indicator=".htmx-indicator" hx-include="[name='durationCode']">
+            <select id="animal" name="animal">
                 <option value="0">Ant</option>
                 <option value="1">Millipede</option>
                 <option value="2">Mosquito</option>
                 <option value="3">Lobster larva</option>
             </select><br>
             <button>
-                Submit your answer
+                Submit your guess
             </button>
+
+        {% else %}
+
+        <form id='form' method='POST' action='/submission'>
+            <input hidden type="text" id="name" name="name" value="{{ puzzle }}">
+            <input hidden type="text" id="visitor" name="visitor" value="{{ visitor }}">
+            <label for="animal1">Submitting results</label><br>
         </form>
+
+        {% endif %}
     </body>
 </html>
