DEV: update question

--- a/openday_scavenger/puzzles/ant/static/index.html
+++ b/openday_scavenger/puzzles/ant/static/index.html
@@ -13,10 +13,9 @@
             <h1 class="title">Look inside the ant! 🐜</h1>
          
             <div class="instructions">
-             <p>Below is the reconstructed CT data of an ant. The Micro-Computed Tomography (MCT) beamline uses monochromatic, pink, and white X-ray beams to provide detailed</p> 
-             <p>three-dimensional (3D) structures at high spatial resolution (down to 200 nm) for a wide variety of </p>
-             <p>technologically-important samples, materials and biological systems.</p> 
-             <p>What's the <b>resolution</b> can MCT? 👀 Select your answer at the bottom of this page! 👇</p>
+             <p>Below is the reconstructed CT data of an ant taken in Micro-Computed Tomography (MCT) beamline. MCT can take three-dimensional (3D) structures at high spatial resolution.</p> 
+             <p>The simplified model for the resolution calculation is (object_size/(num_of_stitches*num_of_pixel_for_each_stitch)). So we know the size of the ant is 2 mm(200 micron),the number of</p>
+             <p>stitch is 2 and each stich has 2560 pixels across the length.Guess what's the <b>resolution</b> MCT can reach? 👀 Select your answer at the bottom of this page! 👇</p>
             </div>
 
            <hr class="solid">
