--- a/openday_scavenger/puzzles/ant/static/index.html
+++ b/openday_scavenger/puzzles/ant/static/index.html
@@ -14,7 +14,7 @@
          
             <div class="instructions">
              <p>Below is the reconstructed CT data of an ant taken in Micro-Computed Tomography (MCT) beamline. MCT can take three-dimensional (3D) structures at high spatial resolution.</p> 
-             <p>The simplified model for the resolution calculation is (object_size/(num_of_stitches*num_of_pixel_for_each_stitch)). So we know the size of the ant is 2 mm(2000 micron),the number of</p>
+             <p>The simplified model for the resolution calculation is (object_size/(num_of_stitches*num_of_pixel_for_each_stitch)). So we know the size of the ant is 2 mm(2000 micron meter),the number of</p>
              <p>stitch is 2 and each stich has 2560 pixels across the length.Guess what's the <b>resolution</b> MCT can reach? 👀 Select your answer at the bottom of this page! 👇</p>
             </div>
 
