--- a/openday_scavenger/static/html/404_invalid_uid.html
+++ b/openday_scavenger/static/html/404_invalid_uid.html
@@ -8,7 +8,7 @@
     </p>
     <p class="mt-5">
         If you'd like to join the scavenger hunt,<br />
-        come to Scientific Computing booth!
+        come to the Scientific Computing booth!
     </p>
     <p class="text-secondary mt-5">
         <a href="/">Click here to go back to the main page!</a>
