--- a/openday_scavenger/puzzles/xray_filters/static/index.html
+++ b/openday_scavenger/puzzles/xray_filters/static/index.html
@@ -9,76 +9,78 @@
         <link id="favicon" rel="icon" type="image/x-icon" href="/static/favicon.ico">
 
         <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const checkboxFilterPairs = [
-                { checkboxId: 'filter1-checkbox', filterClass: '.filter1', beamClass: '.beam1' },
-                { checkboxId: 'filter2-checkbox', filterClass: '.filter2', beamClass: '.beam2' },
-                { checkboxId: 'filter3-checkbox', filterClass: '.filter3', beamClass: '.beam3' },
-                { checkboxId: 'filter4-checkbox', filterClass: '.filter4', beamClass: '.beam4' }
-            ];
+            document.addEventListener('DOMContentLoaded', () => {
+                const checkboxFilterPairs = [
+                    { checkboxId: 'filter1-checkbox', filterClass: '.filter1', beamClass: '.beam1' },
+                    { checkboxId: 'filter2-checkbox', filterClass: '.filter2', beamClass: '.beam2' },
+                    { checkboxId: 'filter3-checkbox', filterClass: '.filter3', beamClass: '.beam3' },
+                    { checkboxId: 'filter4-checkbox', filterClass: '.filter4', beamClass: '.beam4' }
+                ];
 
-            function updateBeamsAndFilters() {
-                const activeBeams = [];
+                function updateBeamsAndFilters() {
+                    const activeBeams = [];
 
-                // Loop through each checkbox and update visibility/dimming
+                    // Loop through each checkbox and update visibility/dimming
+                    checkboxFilterPairs.forEach(pair => {
+                        const checkbox = document.getElementById(pair.checkboxId);
+                        const filter = document.querySelector(pair.filterClass);
+                        const beam = document.querySelector(pair.beamClass);
+
+                        if (checkbox.checked) {
+                            // Filter down
+                            filter.classList.add(pair.filterClass.replace('.', '') + '-down');
+                            beam.style.visibility = 'visible';
+                            beam.style.opacity = '1';
+                            activeBeams.push(beam); // Collect visible beams
+                        } else {
+                            // Filter up
+                            filter.classList.remove(pair.filterClass.replace('.', '') + '-down');
+                            beam.style.visibility = 'hidden';
+                            beam.style.opacity = '0';
+                        }
+                    });
+
+                    // Apply progressive dimming in **reverse order**
+                    activeBeams.reverse().forEach((beam, index) => {
+                        // Clear previous dimming classes
+                        beam.classList.remove('dim-2', 'dim-3', 'dim-4');
+
+                        // Apply appropriate dimming class (reverse order)
+                        beam.classList.add(`dim-${index + 1}`);
+
+                        // forceRepaint(beam);
+                    });
+                }
+
+                // Loop through each pair and add event listeners to toggle 'down' class and update beams
                 checkboxFilterPairs.forEach(pair => {
                     const checkbox = document.getElementById(pair.checkboxId);
-                    const filter = document.querySelector(pair.filterClass);
-                    const beam = document.querySelector(pair.beamClass);
-
-                    if (checkbox.checked) {
-                        // Filter down
-                        filter.classList.add(pair.filterClass.replace('.', '') + '-down');
-                        beam.style.visibility = 'visible';
-                        beam.style.opacity = '1';
-                        activeBeams.push(beam); // Collect visible beams
-                    } else {
-                        // Filter up
-                        filter.classList.remove(pair.filterClass.replace('.', '') + '-down');
-                        beam.style.visibility = 'hidden';
-                        beam.style.opacity = '0';
-                    }
+                    checkbox.addEventListener('change', updateBeamsAndFilters);
                 });
 
-                // Apply progressive dimming in **reverse order**
-                activeBeams.reverse().forEach((beam, index) => {
-                    // Clear previous dimming classes
-                    beam.classList.remove('dim-2', 'dim-3', 'dim-4');
+                // Handle attenuation calculations for all checkboxes
+                function handleCheckboxClick() {
+                    let target_attenuation = 1;
+                    const checkboxes = document.querySelectorAll('.checkbox');
 
-                    // Apply appropriate dimming class (reverse order)
-                    beam.classList.add(`dim-${index + 1}`);
-                });
-            }
+                    // Calculate attenuation based on checked filters
+                    checkboxes.forEach(checkbox => {
+                        if (checkbox.checked) {
+                            target_attenuation *= parseFloat(checkbox.value);
+                        }
+                    });
 
-            // Loop through each pair and add event listeners to toggle 'down' class and update beams
-            checkboxFilterPairs.forEach(pair => {
-                const checkbox = document.getElementById(pair.checkboxId);
-                checkbox.addEventListener('change', updateBeamsAndFilters);
-            });
+                    // Display the target attenuation
+                    document.getElementById('output').innerText = 'Target attenuation: ' + Math.round((1-target_attenuation)*100*10)/10 + '%';
+                    document.getElementById('answer').value = Math.round((1-target_attenuation)*100*10)/10;
+                }
 
-            // Handle attenuation calculations for all checkboxes
-            function handleCheckboxClick() {
-                let target_attenuation = 1;
+                // Add event listeners to all checkboxes for attenuation
                 const checkboxes = document.querySelectorAll('.checkbox');
-
-                // Calculate attenuation based on checked filters
                 checkboxes.forEach(checkbox => {
-                    if (checkbox.checked) {
-                        target_attenuation *= parseFloat(checkbox.value);
-                    }
+                    checkbox.addEventListener('click', handleCheckboxClick);
                 });
-
-                // Display the target attenuation
-                document.getElementById('output').innerText = 'Target attenuation: ' + Math.round((1-target_attenuation)*100*10)/10 + '%';
-                document.getElementById('answer').value = Math.round((1-target_attenuation)*100*10)/10;
-            }
-
-            // Add event listeners to all checkboxes for attenuation
-            const checkboxes = document.querySelectorAll('.checkbox');
-            checkboxes.forEach(checkbox => {
-                checkbox.addEventListener('click', handleCheckboxClick);
             });
-        });
         </script>
     </head>
     <body>
