change strong to intense to describe the beam

--- a/openday_scavenger/puzzles/xray_filters/static/index.html
+++ b/openday_scavenger/puzzles/xray_filters/static/index.html
@@ -88,7 +88,7 @@
             <h1>X-ray Filter Puzzle</h1>
         </div>
         <div class="main-content">
-            <p>Sometimes, the x-rays are too strong(!). We need to attenuate them (make them weaker.) We do this by using filters to stop some of those pesky x-rays.</p>
+            <p>Sometimes, the x-rays are too intense(!). We need to attenuate them (make them less intense.) We do this by using filters to stop some of those pesky x-rays.</p>
 
             <p>At ADS2, we will be using filters to attenuate our 86.8 keV x-ray beam, so this puzzle is based on a real example.</p>
 
